--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mythical Books</title>
+
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="./css/general-style.css" />
+    <link rel="stylesheet" href="./css/colors.css" />
+    <link rel="stylesheet" href="./css/media-query.css" />
+    <link rel="stylesheet" href="./css/typography.css" />
   </head>
   <body></body>
 </html>
