--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1></h1>
+      <nav></nav>
+    </header>
+  </body>
 </html>
