--- a/index.html
+++ b/index.html
@@ -32,5 +32,11 @@
       <h1>Mythical Books</h1>
       <nav></nav>
     </header>
+    <footer>
+      <div>
+        <p></p>
+      </div>
+      <div></div>
+    </footer>
   </body>
 </html>
