Footer's paragraph filled, and comments for header and footer added.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,22 @@
     />
   </head>
   <body>
+    <!-- HEADER
+    ================================================================== -->
     <header>
       <h1>Mythical Books</h1>
       <nav></nav>
     </header>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+    <!-- FOOTER
+    ================================================================== -->
     <footer>
       <div>
-        <p></p>
+        <p>Copyright&copy; | Created by Débora Bucci</p>
       </div>
       <div></div>
     </footer>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
   </body>
 </html>
