<form> element added with the following children: <div> with an <input> children with email type and a placeholder. A <button> with 'Get Started' as the clickeable text.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
     </header>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
+    <!-- HEADER
+    ================================================================== -->
+    <form action="">
+      <!-- title -->
+      <h2>Start your membership now :</h2>
+
+      <!-- box -->
+      <div>
+        <p>Don't miss out!</p>
+        <div>
+          <input type="email" placeholder="Enter your email address..." />
+        </div>
+        <button>Get Started</button>
+      </div>
+    </form>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
     <!-- FOOTER
     ================================================================== -->
     <footer>
