Added a <section> element and some comments for the page's features.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-    <!-- HEADER
+    <!-- FORM
     ================================================================== -->
     <form action="">
       <!-- title -->
@@ -51,6 +51,18 @@
         <button>Get Started</button>
       </div>
     </form>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+    <!-- SECTION
+    ================================================================== -->
+    <section>
+      <!-- feature one -->
+      <div></div>
+      <!-- feature two -->
+      <div></div>
+      <!-- feature three -->
+      <div></div>
+    </section>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
     <!-- FOOTER
