<div> created with an embedded <video> tag, and the page video is linked through it.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,66 @@
     ================================================================== -->
     <section>
       <!-- feature one -->
-      <div></div>
+      <div>
+        <div>
+          <i class="fas fa-percent"></i>
+        </div>
+        <div>
+          <h3>Crazy Discounts!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nam
+            blanditiis corporis corrupti ipsum laboriosam nulla doloremque
+            perferendis necessitatibus sequi.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, modi?
+          </p>
+        </div>
+      </div>
       <!-- feature two -->
-      <div></div>
+      <div>
+        <div>
+          <i class="fas fa-lock"></i>
+        </div>
+        <div>
+          <h3>Protected Shiptment</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem,
+            quasi. Hic atque doloribus nam rem facilis sint fugit ratione earum
+            repellat nemo, molestias delectus magnam impedit officia, voluptas
+            distinctio? Quas.
+          </p>
+        </div>
+      </div>
       <!-- feature three -->
-      <div></div>
+      <div>
+        <div>
+          <i class="fas fa-boxes"></i>
+        </div>
+        <div>
+          <h2>Special Gifts!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+            accusamus voluptatibus aliquid error quaerat laudantium autem minima
+            recusandae dignissimos tempore? Fugiat eos ipsam expedita, quam
+            blanditiis quas, sed tenetur, autem aperiam aut qui sit quia.
+          </p>
+        </div>
+      </div>
     </section>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+    <!-- VIDEO
+    ================================================================== -->
+    <div>
+      <video width="500px" controls autoplay muted>
+        <!-- video source -->
+        <source src="./videos/Video Inside A Library.mp4" type="video/mp4" />
+
+        <!-- alternative text -->
+        Your browser does not support the video tag.
+      </video>
+    </div>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
     <!-- FOOTER
