another <section> element added. This section has some text that 'explain' how the membership and features work.This element has <p>, <ul> and <li> as children elements.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,39 @@
     </div>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
+    <!-- SECTION
+    ================================================================== -->
+    <section>
+      <!-- title -->
+      <h4>How It Works</h4>
+
+      <!-- content -->
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ea?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+        consequatur iure eveniet maiores rem. Facere libero quas obcaecati id ut
+        dicta molestias tempora cum, minima atque sint incidunt totam vel
+        laudantium qui sunt nesciunt? Eum dolore commodi explicabo corrupti ab.
+      </p>
+
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, minus
+          quia quam cupiditate necessitatibus ab veniam eum numquam ea similique
+          consectetur repudiandae eaque, eveniet totam nisi ipsum architecto
+          delectus corrupti.
+        </li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nisi
+          alias ipsa facilis!
+        </li>
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
+      </ul>
+    </section>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
     <!-- FOOTER
     ================================================================== -->
     <footer>
