Another <section> added with the following content: The section states the prices and benefits of each subscription. It has four pricing boxes that are formed by a <div> element. Each box has a <h5> element with the name of the subscription, an <i> element and a <p> element with some text to describe the subscription.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,75 @@
     </section>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
+    <!-- SECTION
+    ================================================================== -->
+    <section>
+      <!-- box -->
+      <div>
+        <div>
+          <i class="fas fa-leaf"></i>
+          <h5>Villager</h5>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            doloremque natus distinctio tempora dolor voluptates. Sequi eum
+            ipsam itaque ab!
+          </p>
+        </div>
+      </div>
+
+      <!-- box -->
+      <div>
+        <div>
+          <i class="fas fa-chess-knight"></i>
+          <h5>Knight</h5>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto
+            incidunt totam autem. Ducimus asperiores omnis labore nam dolor eos
+            culpa aut fugit aperiam rerum. Similique hic maiores atque natus
+            illo?
+          </p>
+        </div>
+      </div>
+
+      <!-- box -->
+      <div>
+        <div>
+          <i class="fas fa-shield-alt"></i>
+          <h5>Paladin</h5>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            numquam ex voluptatem? Atque nihil, deserunt, ab ad dolores suscipit
+            aperiam natus in rem quam porro!
+          </p>
+        </div>
+      </div>
+
+      <!-- box -->
+      <div>
+        <div>
+          <i class="fas fa-crown"></i>
+          <h5>King</h5>
+        </div>
+        <div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus non,
+            placeat voluptate fuga laboriosam, sit rerum hic at maxime
+            temporibus quae. Veniam, nesciunt reiciendis labore voluptas alias
+            quae, sequi repudiandae pariatur optio harum ipsam tempora
+            praesentium recusandae. Error, veritatis fuga! Recusandae, delectus
+            eaque? Obcaecati, ipsum facere rerum ad eius commodi!
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
     <!-- FOOTER
     ================================================================== -->
     <footer>
