Changes made inside of <header> element: Changed the <h1> element's text for an image with the name and logo of the page. Added four links.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
     <!-- HEADER
     ================================================================== -->
     <header>
-      <h1>Mythical Books</h1>
-      <nav></nav>
+      <h1><img src="./images/logo.png" alt="Mythical books' logo" /></h1>
+      <nav>
+        <a href="#">Get Started</a>
+        <a href="#">Features</a>
+        <a href="#">How it Works</a>
+        <a href="#">Pricing</a>
+      </nav>
     </header>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
