--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <h1><img src="./images/logo.png" alt="Mythical books' logo" /></h1>
       <nav>
-        <a href="#">Get Started</a>
+        <a href="#get-started">Get Started</a>
         <a href="#">Features</a>
         <a href="#">How it Works</a>
         <a href="#">Pricing</a>
@@ -43,12 +43,12 @@
 
     <!-- FORM
     ================================================================== -->
-    <form action="">
+    <form action="" id="get-started">
       <!-- title -->
       <h2>Start your membership now :</h2>
 
       <!-- box -->
-      <div>
+      <div class="input-box">
         <p>Don't miss out!</p>
         <div>
           <input type="email" placeholder="Enter your email address..." />
