<section>'s icons changed.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     ================================================================== -->
     <section>
       <!-- feature one -->
-      <div>
+      <div class="feature-box">
         <div>
-          <i class="fas fa-percent"></i>
+          <i class="fas fa-tags"></i>
         </div>
         <div>
           <h3>Crazy Discounts!</h3>
@@ -78,10 +78,11 @@
           </p>
         </div>
       </div>
+
       <!-- feature two -->
-      <div>
+      <div class="feature-box">
         <div>
-          <i class="fas fa-lock"></i>
+          <i class="fas fa-user-shield"></i>
         </div>
         <div>
           <h3>Protected Shiptment</h3>
@@ -93,10 +94,11 @@
           </p>
         </div>
       </div>
+
       <!-- feature three -->
-      <div>
+      <div class="feature-box">
         <div>
-          <i class="fas fa-boxes"></i>
+          <i class="fas fa-gifts"></i>
         </div>
         <div>
           <h2>Special Gifts!</h2>
