The following changes were made: New class added: 'section-one'. Mistake fixed: The 'Special Gifts!' element changed from <h2> to <h3>.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- SECTION
     ================================================================== -->
-    <section>
+    <section class="section-one">
       <!-- feature one -->
       <div class="feature-box">
         <div>
@@ -101,7 +101,7 @@
           <i class="fas fa-gifts"></i>
         </div>
         <div>
-          <h2>Special Gifts!</h2>
+          <h3>Special Gifts!</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
             accusamus voluptatibus aliquid error quaerat laudantium autem minima
