--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- VIDEO
     ================================================================== -->
-    <div>
+    <div class="video-container">
       <video width="500px" controls autoplay muted>
         <!-- video source -->
         <source src="./videos/Video Inside A Library.mp4" type="video/mp4" />
