--- a/index.html
+++ b/index.html
@@ -43,74 +43,21 @@
 
     <!-- FORM
     ================================================================== -->
-    <form action="" id="get-started">
-      <!-- title -->
-      <h2>Start your membership now :</h2>
+    <div class="form-container" id="get-started">
+      <form action="">
+        <!-- title -->
+        <h2>Start your membership now :</h2>
 
-      <!-- box -->
-      <div class="input-box">
-        <p>Don't miss out!</p>
-        <div>
-          <input type="email" placeholder="Enter your email address..." />
+        <!-- box -->
+        <div class="input-box">
+          <p>Don't miss out!</p>
+          <div>
+            <input type="email" placeholder="Enter your email address..." />
+          </div>
+          <button>Get Started</button>
         </div>
-        <button>Get Started</button>
-      </div>
-    </form>
-    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-
-    <!-- SECTION
-    ================================================================== -->
-    <section class="section-one">
-      <!-- feature one -->
-      <div class="feature-box">
-        <div>
-          <i class="fas fa-tags"></i>
-        </div>
-        <div>
-          <h3>Crazy Discounts!</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nam
-            blanditiis corporis corrupti ipsum laboriosam nulla doloremque
-            perferendis necessitatibus sequi.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, modi?
-          </p>
-        </div>
-      </div>
-
-      <!-- feature two -->
-      <div class="feature-box">
-        <div>
-          <i class="fas fa-user-shield"></i>
-        </div>
-        <div>
-          <h3>Protected Shiptment</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem,
-            quasi. Hic atque doloribus nam rem facilis sint fugit ratione earum
-            repellat nemo, molestias delectus magnam impedit officia, voluptas
-            distinctio? Quas.
-          </p>
-        </div>
-      </div>
-
-      <!-- feature three -->
-      <div class="feature-box">
-        <div>
-          <i class="fas fa-gifts"></i>
-        </div>
-        <div>
-          <h3>Special Gifts!</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-            accusamus voluptatibus aliquid error quaerat laudantium autem minima
-            recusandae dignissimos tempore? Fugiat eos ipsam expedita, quam
-            blanditiis quas, sed tenetur, autem aperiam aut qui sit quia.
-          </p>
-        </div>
-      </div>
-    </section>
+      </form>
+    </div>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
     <!-- VIDEO
@@ -126,37 +73,100 @@
     </div>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-    <!-- SECTION
+    <!-- SECTION ONE
     ================================================================== -->
-    <section>
-      <!-- title -->
-      <h4>How It Works</h4>
+    <div class="section-one-container">
+      <section class="section-one">
+        <!-- feature one -->
+        <div class="feature-box">
+          <div>
+            <i class="fas fa-tags"></i>
+          </div>
+          <div>
+            <h3>Crazy Discounts!</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nam
+              blanditiis corporis corrupti ipsum laboriosam nulla doloremque
+              perferendis necessitatibus sequi.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              modi?
+            </p>
+          </div>
+        </div>
 
-      <!-- content -->
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ea?</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-        consequatur iure eveniet maiores rem. Facere libero quas obcaecati id ut
-        dicta molestias tempora cum, minima atque sint incidunt totam vel
-        laudantium qui sunt nesciunt? Eum dolore commodi explicabo corrupti ab.
-      </p>
+        <!-- feature two -->
+        <div class="feature-box">
+          <div>
+            <i class="fas fa-user-shield"></i>
+          </div>
+          <div>
+            <h3>Protected Shipment</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem,
+              quasi. Hic atque doloribus nam rem facilis sint fugit ratione
+              earum repellat nemo, molestias delectus magnam impedit officia,
+              voluptas distinctio? Quas.
+            </p>
+          </div>
+        </div>
 
-      <ul>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, minus
-          quia quam cupiditate necessitatibus ab veniam eum numquam ea similique
-          consectetur repudiandae eaque, eveniet totam nisi ipsum architecto
-          delectus corrupti.
-        </li>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nisi
-          alias ipsa facilis!
-        </li>
-        <li>Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
-      </ul>
-    </section>
+        <!-- feature three -->
+        <div class="feature-box">
+          <div>
+            <i class="fas fa-gifts"></i>
+          </div>
+          <div>
+            <h3>Special Gifts!</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+              accusamus voluptatibus aliquid error quaerat laudantium autem
+              minima recusandae dignissimos tempore? Fugiat eos ipsam expedita,
+              quam blanditiis quas, sed tenetur, autem aperiam aut qui sit quia.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+    <!-- SECTION TWO
+    ================================================================== -->
+    <div class="section-two-container">
+      <section class="section-two">
+        <!-- title -->
+        <h4>How It Works</h4>
+
+        <!-- content -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ea?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+          consequatur iure eveniet maiores rem. Facere libero quas obcaecati id
+          ut dicta molestias tempora cum, minima atque sint incidunt totam vel
+          laudantium qui sunt nesciunt? Eum dolore commodi explicabo corrupti
+          ab.
+        </p>
+
+        <ul>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, minus
+            quia quam cupiditate necessitatibus ab veniam eum numquam ea
+            similique consectetur repudiandae eaque, eveniet totam nisi ipsum
+            architecto delectus corrupti.
+          </li>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet
+            nisi alias ipsa facilis!
+          </li>
+          <li>Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
+        </ul>
+      </section>
+    </div>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
     <!-- SECTION
