Make the following changes to every children element of the last <section> element: - Add/Change comments. - Add classes: 'section-three', 'pricing-box', 'pricing-box-title', 'subscription-info', 'prices', 'yearly', 'line-through', 'benefits', 'benefits-title', 'prices-btn', 'villager', 'villager-title', 'knight', 'knight-title', 'paladin', 'paladin-title', 'wizard', 'wizard-title', 'king-queen', 'king-queen-titile'. - Add monthly and yearly pricing of every subscription in <p> elements. - Add the subscription benefits of every subscription in <p> elements. - Add <div> element with a <button> element as its child. - Change/Add <i> element.

--- a/index.html
+++ b/index.html
@@ -171,68 +171,218 @@
 
     <!-- SECTION
     ================================================================== -->
-    <section>
-      <!-- box -->
-      <div>
-        <div>
+    <section class="section-three">
+      <!-- PRINCING BOX : VILLAGER -->
+      <div class="pricing-box villager">
+        <!-- TITLE -->
+        <div class="pricing-box-title villager-title">
           <i class="fas fa-leaf"></i>
           <h5>Villager</h5>
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
-            doloremque natus distinctio tempora dolor voluptates. Sequi eum
-            ipsam itaque ab!
-          </p>
+
+        <!-- INFO -->
+        <div class="subscription-info">
+          <!-- prices -->
+          <div class="prices">
+            <!-- monthly payment -->
+            <div>
+              <p>$ 5 / month</p>
+            </div>
+
+            <!-- yearly payment -->
+            <div class="yearly">
+              <p class="line-through">$ 60</p>
+              <p>$ 55 / year</p>
+            </div>
+          </div>
+
+          <!-- benefits -->
+          <div class="benefits">
+            <div class="benefits-title">
+              <p>Subscription Benefits:</p>
+            </div>
+            <div>
+              <p>Mystery Box: <span>Bronze</span></p>
+              <p>Free Delivery Service with your buy of $50 or more</p>
+              <p>Discounts of 5% to 10% OFF</p>
+            </div>
+          </div>
+
+          <!-- button -->
+          <div class="prices-btn"><button>SELECT</button></div>
         </div>
       </div>
 
-      <!-- box -->
-      <div>
-        <div>
+      <!-- PRINCING BOX : KNIGTH -->
+      <div class="pricing-box knight">
+        <!-- TITLE -->
+        <div class="pricing-box-title knight-title">
           <i class="fas fa-chess-knight"></i>
           <h5>Knight</h5>
+
+          <!-- INFO -->
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto
-            incidunt totam autem. Ducimus asperiores omnis labore nam dolor eos
-            culpa aut fugit aperiam rerum. Similique hic maiores atque natus
-            illo?
-          </p>
+
+        <!-- INFO -->
+        <div class="subscription-info">
+          <!-- prices -->
+          <div class="prices">
+            <!-- monthly payment -->
+            <div>
+              <p>$ 9 / month</p>
+            </div>
+
+            <!-- yearly payment -->
+            <div class="yearly">
+              <p class="line-through">$108</p>
+              <p>$99 / year</p>
+            </div>
+          </div>
+          <!-- benefits -->
+          <div class="benefits">
+            <div class="benefits-title">
+              <p>Subscription Benefits:</p>
+            </div>
+            <div>
+              <p>Mystery Box: <span>Silver</span> & <span>Gold</span></p>
+              <p>Free Delivery Service with your buy of $35 or more</p>
+              <p>Discounts of 10% to 15% OFF</p>
+            </div>
+          </div>
+
+          <!-- button -->
+          <div class="prices-btn">
+            <button>SELECT</button>
+          </div>
         </div>
       </div>
 
-      <!-- box -->
-      <div>
-        <div>
+      <!-- PRINCING BOX : PALADIN -->
+      <div class="pricing-box paladin">
+        <!-- TITLE -->
+        <div class="pricing-box-title paladin-title">
           <i class="fas fa-shield-alt"></i>
           <h5>Paladin</h5>
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
-            numquam ex voluptatem? Atque nihil, deserunt, ab ad dolores suscipit
-            aperiam natus in rem quam porro!
-          </p>
+
+        <!-- INFO -->
+        <div class="subscription-info">
+          <!-- prices -->
+          <div class="prices">
+            <!-- monthly payment -->
+            <div>
+              <p>$19 / month</p>
+            </div>
+
+            <!-- yearly payment -->
+            <div class="yearly">
+              <p class="line-through">$228</p>
+              <p>$189 / year</p>
+            </div>
+          </div>
+
+          <!-- benefits -->
+          <div class="benefits">
+            <div class="benefits-title">
+              <p>Subscription Benefits:</p>
+            </div>
+            <div>
+              <p>Mystery Box: <span>Sapphire</span> & <span>Ruby</span></p>
+              <p>Free Delivery Service with your buy of $20 or more</p>
+              <p>Discounts of 20% to 25% OFF</p>
+            </div>
+          </div>
+          <!-- button -->
+          <div class="prices-btn">
+            <button>SELECT</button>
+          </div>
         </div>
       </div>
 
-      <!-- box -->
-      <div>
-        <div>
-          <i class="fas fa-crown"></i>
-          <h5>King</h5>
+      <!-- PRINCING BOX : WIZARD -->
+      <div class="pricing-box wizard">
+        <!-- TITLE -->
+        <div class="pricing-box-title wizard-title">
+          <i class="fas fa-hat-wizard"></i>
+          <h5>Wizard</h5>
         </div>
-        <div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus non,
-            placeat voluptate fuga laboriosam, sit rerum hic at maxime
-            temporibus quae. Veniam, nesciunt reiciendis labore voluptas alias
-            quae, sequi repudiandae pariatur optio harum ipsam tempora
-            praesentium recusandae. Error, veritatis fuga! Recusandae, delectus
-            eaque? Obcaecati, ipsum facere rerum ad eius commodi!
-          </p>
+
+        <!-- INFO -->
+        <div class="subscription-info">
+          <!-- prices -->
+          <div class="prices">
+            <!-- monthly payment -->
+            <div>
+              <p>$29 / month</p>
+            </div>
+
+            <!-- yearly payment -->
+            <div class="yearly">
+              <p class="line-through">$348</p>
+              <p>$309 / year</p>
+            </div>
+          </div>
+
+          <!-- benefits -->
+          <div class="benefits">
+            <div class="benefits-title">
+              <p>Subscription Benefits:</p>
+            </div>
+            <div>
+              <p>Mystery Box: <span>Emerald</span> & <span>Diamond</span></p>
+              <p>Free Delivery Service with your buy</p>
+              <p>Discounts of 30% to 35 OFF</p>
+            </div>
+          </div>
+          <!-- button -->
+          <div class="prices-btn">
+            <button>SELECT</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- PRINCING BOX : KING / QUEEN -->
+      <div class="pricing-box king-queen">
+        <!-- TITLE -->
+        <div class="pricing-box-title king-queen-title">
+          <i class="fas fa-crown"></i>
+          <h5>King <small>or</small> Queen</h5>
+        </div>
+
+        <!-- INFO -->
+        <div class="subscription-info">
+          <!-- prices -->
+          <div class="prices">
+            <!-- montly payment -->
+            <div>
+              <p>$35 / month</p>
+            </div>
+
+            <!-- yearly payment -->
+            <div class="yearly">
+              <p class="line-through">$420</p>
+              <p>$369 / year</p>
+            </div>
+          </div>
+
+          <!-- benefits -->
+          <div class="benefits">
+            <div class="benefits-title">
+              <p>Subscription Benefits:</p>
+            </div>
+            <div>
+              <p>
+                Mystery Box: <span>Blue Diamond</span> &
+                <span>Pink Diamond</span>
+              </p>
+              <p>Free Delivery Service with your buy</p>
+              <p>Discounts of 40% to 60% OFF</p>
+            </div>
+          </div>
+          <!-- button -->
+          <div class="prices-btn">
+            <button>SELECT</button>
+          </div>
         </div>
       </div>
     </section>
