Change 'Mystery Box' for 'Mystery Chest'.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <p>Subscription Benefits:</p>
             </div>
             <div>
-              <p>Mystery Box: <span>Bronze</span></p>
+              <p>Mystery Chest: <span>Bronze</span></p>
               <p>Free Delivery Service with your buy of $50 or more</p>
               <p>Discounts of 5% to 10% OFF</p>
             </div>
@@ -244,7 +244,7 @@
               <p>Subscription Benefits:</p>
             </div>
             <div>
-              <p>Mystery Box: <span>Silver</span> & <span>Gold</span></p>
+              <p>Mystery Chest: <span>Silver</span> & <span>Gold</span></p>
               <p>Free Delivery Service with your buy of $35 or more</p>
               <p>Discounts of 10% to 15% OFF</p>
             </div>
@@ -287,7 +287,7 @@
               <p>Subscription Benefits:</p>
             </div>
             <div>
-              <p>Mystery Box: <span>Sapphire</span> & <span>Ruby</span></p>
+              <p>Mystery Chest: <span>Sapphire</span> & <span>Ruby</span></p>
               <p>Free Delivery Service with your buy of $20 or more</p>
               <p>Discounts of 20% to 25% OFF</p>
             </div>
@@ -329,7 +329,7 @@
               <p>Subscription Benefits:</p>
             </div>
             <div>
-              <p>Mystery Box: <span>Emerald</span> & <span>Diamond</span></p>
+              <p>Mystery Chest: <span>Emerald</span> & <span>Diamond</span></p>
               <p>Free Delivery Service with your buy</p>
               <p>Discounts of 30% to 35 OFF</p>
             </div>
@@ -372,7 +372,7 @@
             </div>
             <div>
               <p>
-                Mystery Box: <span>Blue Diamond</span> &
+                Mystery Chest: <span>Blue Diamond</span> &
                 <span>Pink Diamond</span>
               </p>
               <p>Free Delivery Service with your buy</p>
