Change <p> text inside of the <div> with the class of 'benefits-title'.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Bronze</span></p>
-              <p>Free Delivery Service with your buy of $50 or more</p>
+              <p>Free Delivery Service with buy of $50 or more</p>
               <p>Discounts of 5% to 10% OFF</p>
             </div>
           </div>
@@ -245,7 +245,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Silver</span> & <span>Gold</span></p>
-              <p>Free Delivery Service with your buy of $35 or more</p>
+              <p>Free Delivery Service with buy of $30 or more</p>
               <p>Discounts of 10% to 15% OFF</p>
             </div>
           </div>
@@ -288,7 +288,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Sapphire</span> & <span>Ruby</span></p>
-              <p>Free Delivery Service with your buy of $20 or more</p>
+              <p>Free Delivery Service with buy of $20 or more</p>
               <p>Discounts of 20% to 25% OFF</p>
             </div>
           </div>
@@ -330,7 +330,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Emerald</span> & <span>Diamond</span></p>
-              <p>Free Delivery Service with your buy</p>
+              <p>Free Delivery Service</p>
               <p>Discounts of 30% to 35 OFF</p>
             </div>
           </div>
@@ -375,7 +375,7 @@
                 Mystery Chest: <span>Blue Diamond</span> &
                 <span>Pink Diamond</span>
               </p>
-              <p>Free Delivery Service with your buy</p>
+              <p>Free Delivery Service</p>
               <p>Discounts of 40% to 60% OFF</p>
             </div>
           </div>
