Make the following changes to the <footer> element: - Create the following classes: 'footer-nav', 'developer-links', 'copyright', 'footer-logo'. - Create <div> element with a class of 'footer-nav', and make it the parent of three <a> elements. - Make another <div> element but with the class of 'copyright', and make it be the parent of two <p> elements and an <img> element. - Delete extra <div>. - Add comments.

--- a/index.html
+++ b/index.html
@@ -391,10 +391,40 @@
     <!-- FOOTER
     ================================================================== -->
     <footer>
-      <div>
-        <p>Copyright&copy; | Created by Débora Bucci</p>
+      <!-- footer nav -->
+      <div class="footer-nav">
+        <a href="#">Privacy</a>
+
+        <a href="#">Terms</a>
+
+        <a href="#">Contact</a>
       </div>
-      <div></div>
+
+      <!-- copyright container -->
+      <div class="copyright">
+        <p>Copyright&copy; 2021,</p>
+        <img
+          class="footer-logo"
+          src="./images/logo.png"
+          width="80px"
+          alt="Mythical books logo"
+        />
+
+        <!-- developer info -->
+        <p>
+          | By Débora Bucci
+          <a
+            href="https://github.com/DeboraBucci?tab=repositories"
+            class="developer-links"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/d%C3%A9bora-bucci-13a07a212/"
+            class="developer-links"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </p>
+      </div>
     </footer>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
   </body>
