Make the following changes to the <footer> element: - Change the 'copyright container' to 'credits container'. - Change the class of the <div> element under the 'credits container' comment to 'credits-container, and make this element to be the parent of a new <div> element with a class named 'copyright' and the <p> element with the developer info.

--- a/index.html
+++ b/index.html
@@ -400,15 +400,17 @@
         <a href="#">Contact</a>
       </div>
 
-      <!-- copyright container -->
-      <div class="copyright">
-        <p>Copyright&copy; 2021,</p>
-        <img
-          class="footer-logo"
-          src="./images/logo.png"
-          width="80px"
-          alt="Mythical books logo"
-        />
+      <!-- credits container -->
+      <div class="credits-container">
+        <div class="copyright">
+          <p>Copyright&copy; 2021,</p>
+          <img
+            class="footer-logo"
+            src="./images/logo.png"
+            width="80px"
+            alt="Mythical books logo"
+          />
+        </div>
 
         <!-- developer info -->
         <p>
