Make the following changes: - Delete <link> elemenet with the hreft attribute of './css/media-query.css' and add it to the bottom of the links. - Add a new <link> element with the hreft attribute of './css/second-media-query.css' to the bottom of the links. - Change the <p> elements that are inside the <div> elements with the class of 'benefits'.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="./css/colors.css" />
-    <link rel="stylesheet" href="./css/media-query.css" />
     <link rel="stylesheet" href="./css/typography.css" />
     <link rel="stylesheet" href="./css/general-style.css" />
+    <link rel="stylesheet" href="./css/media-query.css" />
+    <link rel="stylesheet" href="./css/second-media-query.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -204,7 +205,7 @@
             <div>
               <p>Mystery Chest: <span>Bronze</span></p>
               <p>Free Delivery Service with buy of $50 or more</p>
-              <p>Discounts of 5% to 10% OFF</p>
+              <p>Discounts: 5% to 10% OFF</p>
             </div>
           </div>
 
@@ -246,7 +247,7 @@
             <div>
               <p>Mystery Chest: <span>Silver</span> & <span>Gold</span></p>
               <p>Free Delivery Service with buy of $30 or more</p>
-              <p>Discounts of 10% to 15% OFF</p>
+              <p>Discounts: 10% to 15% OFF</p>
             </div>
           </div>
 
@@ -289,7 +290,7 @@
             <div>
               <p>Mystery Chest: <span>Sapphire</span> & <span>Ruby</span></p>
               <p>Free Delivery Service with buy of $20 or more</p>
-              <p>Discounts of 20% to 25% OFF</p>
+              <p>Discounts: 20% to 25% OFF</p>
             </div>
           </div>
           <!-- button -->
@@ -331,7 +332,7 @@
             <div>
               <p>Mystery Chest: <span>Emerald</span> & <span>Diamond</span></p>
               <p>Free Delivery Service</p>
-              <p>Discounts of 30% to 35 OFF</p>
+              <p>Discounts: 30% to 35% OFF</p>
             </div>
           </div>
           <!-- button -->
@@ -376,7 +377,7 @@
                 <span>Pink Diamond</span>
               </p>
               <p>Free Delivery Service</p>
-              <p>Discounts of 40% to 60% OFF</p>
+              <p>Discounts: 40% to 60% OFF</p>
             </div>
           </div>
           <!-- button -->
