Add <script> element to freeCodeCamp's project tester.

--- a/index.html
+++ b/index.html
@@ -430,5 +430,10 @@
       </div>
     </footer>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+    <!-- SCRIPT
+    ================================================================== -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
   </body>
 </html>
