--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
   <body>
     <!-- HEADER
     ================================================================== -->
-    <header>
-      <h1><img src="./images/logo.png" alt="Mythical books' logo" /></h1>
-      <nav>
-        <a href="#get-started">Get Started</a>
-        <a href="#">Features</a>
-        <a href="#">How it Works</a>
-        <a href="#">Pricing</a>
+    <header id="header">
+      <h1>
+        <img
+          id="header-img"
+          src="./images/logo.png"
+          alt="Mythical books' logo"
+        />
+      </h1>
+      <nav id="nav-bar">
+        <a class="nav-link" href="#get-started">Get Started</a>
+        <a class="nav-link" href="#features">Features</a>
+        <a class="nav-link" href="#how_it_works">How it Works</a>
+        <a class="nav-link" href="#pricing">Pricing</a>
       </nav>
     </header>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
@@ -45,7 +51,11 @@
     <!-- FORM
     ================================================================== -->
     <div class="form-container" id="get-started">
-      <form action="">
+      <form
+        id="form"
+        action="https://www.freecodecamp.com/email-submit"
+        method="post"
+      >
         <!-- title -->
         <h2>Start your membership now :</h2>
 
@@ -53,9 +63,20 @@
         <div class="input-box">
           <p>Don't miss out!</p>
           <div>
-            <input type="email" placeholder="Enter your email address..." />
+            <input
+              name="email"
+              id="email"
+              type="email"
+              placeholder="Enter your email address..."
+              required
+            />
           </div>
-          <button>Get Started</button>
+          <input
+            id="submit"
+            type="submit"
+            class="form-btn"
+            value="Get Started"
+          />
         </div>
       </form>
     </div>
@@ -64,7 +85,7 @@
     <!-- VIDEO
     ================================================================== -->
     <div class="video-container">
-      <video width="500px" controls autoplay muted>
+      <video id="video" width="500px" controls autoplay muted>
         <!-- video source -->
         <source src="./videos/Video Inside A Library.mp4" type="video/mp4" />
 
@@ -76,7 +97,7 @@
 
     <!-- SECTION ONE
     ================================================================== -->
-    <div class="section-one-container">
+    <div class="section-one-container" id="features">
       <section class="section-one">
         <!-- feature one -->
         <div class="feature-box">
@@ -134,7 +155,7 @@
 
     <!-- SECTION TWO
     ================================================================== -->
-    <div class="section-two-container">
+    <div class="section-two-container" id="how_it_works">
       <section class="section-two">
         <!-- title -->
         <h4>How It Works</h4>
@@ -172,7 +193,7 @@
 
     <!-- SECTION
     ================================================================== -->
-    <section class="section-three">
+    <section class="section-three" id="pricing">
       <!-- PRINCING BOX : VILLAGER -->
       <div class="pricing-box villager">
         <!-- TITLE -->
@@ -434,6 +455,7 @@
     <!-- SCRIPT
     ================================================================== -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="./js/script.js"></script>
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
   </body>
 </html>
