Make the following changes: - Add <a> element inside of the <nav> element with  the classes named 'nav-link' and 'hidden', a href attribute of '#video' and a text of 'video'. - Add id of 'video' into the <div> with the class of 'video-container'. - Change the <p> elements' text inside the <div> elements with the class of 'benefits' to be slightly different.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </h1>
       <nav id="nav-bar">
         <a class="nav-link" href="#get-started">Get Started</a>
+        <a class="nav-link hidden" href="#video">Video</a>
         <a class="nav-link" href="#features">Features</a>
         <a class="nav-link" href="#how_it_works">How it Works</a>
         <a class="nav-link" href="#pricing">Pricing</a>
@@ -84,7 +85,7 @@
 
     <!-- VIDEO
     ================================================================== -->
-    <div class="video-container">
+    <div class="video-container" id="video">
       <video id="video" width="500px" controls autoplay muted>
         <!-- video source -->
         <source src="./videos/Video Inside A Library.mp4" type="video/mp4" />
@@ -225,7 +226,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Bronze</span></p>
-              <p>Free Delivery Service with buy of $50 or more</p>
+              <p>Free Delivery Service with purchase of $50 or more</p>
               <p>Discounts: 5% to 10% OFF</p>
             </div>
           </div>
@@ -267,7 +268,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Silver</span> & <span>Gold</span></p>
-              <p>Free Delivery Service with buy of $30 or more</p>
+              <p>Free Delivery Service with purchase of $30 or more</p>
               <p>Discounts: 10% to 15% OFF</p>
             </div>
           </div>
@@ -310,7 +311,7 @@
             </div>
             <div>
               <p>Mystery Chest: <span>Sapphire</span> & <span>Ruby</span></p>
-              <p>Free Delivery Service with buy of $20 or more</p>
+              <p>Free Delivery Service with purchase of $20 or more</p>
               <p>Discounts: 20% to 25% OFF</p>
             </div>
           </div>
@@ -440,11 +441,13 @@
           <a
             href="https://github.com/DeboraBucci?tab=repositories"
             class="developer-links"
+            target="_blank"
             ><i class="fab fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/d%C3%A9bora-bucci-13a07a212/"
             class="developer-links"
+            target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
         </p>
