--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </h1>
       <nav id="nav-bar">
         <a class="nav-link" href="#get-started">Get Started</a>
-        <a class="nav-link hidden" href="#video">Video</a>
+        <a class="nav-link hidden" href="#video-container">Video</a>
         <a class="nav-link" href="#features">Features</a>
         <a class="nav-link" href="#how_it_works">How it Works</a>
         <a class="nav-link" href="#pricing">Pricing</a>
@@ -85,7 +85,7 @@
 
     <!-- VIDEO
     ================================================================== -->
-    <div class="video-container" id="video">
+    <div class="video-container" id="video-container">
       <video id="video" width="500px" controls autoplay muted>
         <!-- video source -->
         <source src="./videos/Video Inside A Library.mp4" type="video/mp4" />
